working on new project glozzom, which has video play, light box and other cool features

--- a/glozzom/css/style.css
+++ b/glozzom/css/style.css
@@ -82,3 +82,22 @@ body {
 #icon-boxes i, a:link, p {
      color: white;
  }
+
+#faq .card {
+    border: #444;
+}
+
+#faq a {
+    color: #fff;
+    text-decoration: none;
+}
+
+#faq .card-body,
+#faq .card-header {
+    background: #333;
+}
+
+#main-footer p {
+    background: #fff;
+    color: #000;
+}
