working on new project glozzom, which has video play, light box and other cool features

--- a/glozzom/css/style.css
+++ b/glozzom/css/style.css
@@ -97,7 +97,7 @@ body {
     background: #333;
 }
 
-#main-footer p {
-    background: #fff;
-    color: #000;
+#main-footer {
+    background: #000;
+    color: #fff;
 }
